--- a/dev-requirements.in
+++ b/dev-requirements.in
@@ -1,3 +1,4 @@
 # Constrain the dev requirements to packages already selected for production in requirements.txt.
 -c requirements.txt
 flake8~=4.0
+pre-commit~=2.16
