--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+pandas = "^1.4"
+pandas-datareader = "^0.10.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0"
